--- a/Final Project/ClientApp/src/app/userprofile/userprofile.component.html
+++ b/Final Project/ClientApp/src/app/userprofile/userprofile.component.html
@@ -9,7 +9,7 @@
         <input type="text" id="username" />
         <p>Password</p>
         <input type="password" id="password" />
-        <button (click)="ValidateUser()">Login</button>
+        <button class="button" (click)="ValidateUser()">Login</button>
         <div *ngIf="validLogin===false">
             <p>Incorrect User Name and Password - please try again.</p>
             
